@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: udp.test,v 1.4 2003/03/12 00:21:17 patthoyts Exp $
+# RCS: @(#) $Id: udp.test,v 1.5 2008/07/05 20:41:44 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -94,6 +94,24 @@ test udp-2.2 {udp_open on named port} {pcOnly} {
     } msg] $msg
 } {0 0x007b}
 
+test udp-3.8 {multicastloop can be set to true} \
+    -body {
+	set s [udp_open]
+	fconfigure $s -mcastloop "true"
+	fconfigure $s -mcastloop
+    } -result {1} -cleanup {
+	close $s
+    }
+
+test udp-3.9 {multicastloop can be set to false} \
+    -body {
+	set s [udp_open]
+	fconfigure $s -mcastloop "true"
+	fconfigure $s -mcastloop "no"
+	fconfigure $s -mcastloop
+    } -result {0} -cleanup {
+	close $s
+    }
 
 # -------------------------------------------------------------------------
 # cleanup
